--- a/client/src/components/LogIn/Login.scss
+++ b/client/src/components/LogIn/Login.scss
@@ -1,4 +1,41 @@
 .top__container {
   display: flex;
-  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 0 21px;
+}
+.brand__logo {
+  margin-bottom: 70px;
+}
+.login__form {
+  width: 100%;
+}
+.form__container {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  padding: 0 19px 21px 19px;
+  border-bottom: 1px solid black;
+  margin-bottom: 22px;
+}
+.login-form__username,
+.login-form__password {
+  border: none;
+  margin-left: 30px;
+  font-size: 18px;
+}
+.form__container:nth-child(3) {
+  height: 24px;
+  margin-bottom: 48px;
+}
+.chevron__container {
+  display: flex;
+}
+.login__button {
+  width: 100%;
+  height: 56px;
+  border-radius: 17px;
+  font-size: 24px;
+  font-weight: 700;
+  border: none;
 }
