--- a/client/src/components/LogIn/Login.scss
+++ b/client/src/components/LogIn/Login.scss
@@ -3,6 +3,7 @@
   align-items: center;
   flex-direction: column;
   padding: 0 21px;
+  background-color: white;
 }
 .brand__logo {
   margin-bottom: 70px;
@@ -27,9 +28,16 @@
 .form__container:nth-child(3) {
   height: 24px;
   margin-bottom: 48px;
+  border-bottom: none;
 }
 .chevron__container {
   display: flex;
+}
+.form__checkbox {
+  height: 24px;
+  width: 24px;
+  border-radius: 6px;
+  margin-right: 30px;
 }
 .login__button {
   width: 100%;
@@ -38,4 +46,32 @@
   font-size: 24px;
   font-weight: 700;
   border: none;
+}
+.chevron__container {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  .chevron__image {
+    margin-left: 17px;
+  }
+  .chevron__text {
+    font-weight: 700;
+  }
+}
+.lower__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 44px 40px;
+  background-color: #e8e8e8;
+  p {
+    margin: 0;
+    font-size: 17px;
+  }
+  .lower__text--bold {
+    font-weight: 700;
+  }
+}
+.login {
+  background-color: #e8e8e8;
 }
