--- a/client/src/components/LogIn/Login.scss
+++ b/client/src/components/LogIn/Login.scss
@@ -4,6 +4,11 @@
   flex-direction: column;
   padding: 0 21px;
   background-color: white;
+  padding-top: 28px;
+}
+.login__header {
+  margin: 0;
+  margin-bottom: 18px;
 }
 .brand__logo {
   margin-bottom: 70px;
@@ -36,7 +41,7 @@
 .form__checkbox {
   height: 24px;
   width: 24px;
-  border-radius: 6px;
+  border-radius: 50px;
   margin-right: 30px;
 }
 .login__button {
@@ -51,11 +56,14 @@
   display: flex;
   justify-content: flex-end;
   width: 100%;
+  padding-top: 20px;
+  padding-bottom: 61px;
   .chevron__image {
     margin-left: 17px;
   }
   .chevron__text {
     font-weight: 700;
+    margin: 0;
   }
 }
 .lower__container {
@@ -74,4 +82,5 @@
 }
 .login {
   background-color: #e8e8e8;
+  min-height: 100vh;
 }
