header and homepage components styled and homescreen linked to cards/add

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -2,7 +2,9 @@
 .App {
   font-family: "Roboto", sans-serif;
 }
-
+* {
+  box-sizing: border-box;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
