--- a/client/src/components/AddCard/add-card.module.scss
+++ b/client/src/components/AddCard/add-card.module.scss
@@ -1,13 +1,68 @@
 .add {
-    &__title {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
 
+    &__pageTitle {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__title {
+        text-align: center;
+        margin: 0;
     }
 
     &__featured {
-
+        margin-top: 30px;
+        margin-bottom: 20px;
+        height: 180px;
+        width: 100%;
+        border-radius: 30px;
+        background-color: #ccc;
     }
 
     &__form {
-        
+        input {
+            margin-top: 5px;
+            margin-bottom: 10px;
+            border-width: 0;
+            background-color: #c4c4c4;
+            border-radius: 5px;
+            font-size: 24px;
+            padding: 10px 20px;
+            width: 100%;
+        }
+    }
+
+    &__nextPage {
+        margin: 30px auto 10px auto;
+    }
+
+    &__submit {
+        margin-top: 100px;
+    }
+
+    &__button {
+        width: 150px;
+        padding: 16px 0;
+        border-width: 0;
+        font-size: 20px;
+        border-radius: 5px;
+        background-color: #c4c4c4;
+    }
+
+    &__return {
+        height: fit-content;
+    }
+
+    &__page1 {
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__page2 {
+        @extend .add__page1;
+        align-items: center;
     }
 }
