Nav menu slide in. Adding new card, display accounts on card

--- a/client/src/components/HomeScreen/homeScreen.scss
+++ b/client/src/components/HomeScreen/homeScreen.scss
@@ -13,6 +13,9 @@
     height: 136px;
     background-color: #c4c4c4;
     border-radius: 30px;
+    &-link {
+      margin: 8px 0;
+    }
   }
   &__link {
     text-decoration: none;
