--- a/client/src/components/SideBar/sideBar.scss
+++ b/client/src/components/SideBar/sideBar.scss
@@ -1,13 +1,39 @@
+.navModal {
+    width: 0;
+    position: fixed;
+    top: 0;
+    &.show {
+        width: 100%;
+        height: 100%;
+        background-color: rgba($color: #000000, $alpha: 0.4);
+        backdrop-filter: blur(3px);
+        .sidebar {
+            width: 200px;
+            height: 100vh;
+        }
+    }
+}
+
 .sidebar {
+    position: fixed;
     display: flex;
     flex-direction: column;
+    top: 0;
+    transition: all ease 0.5s;
+    width: 0px;
+    height: 100vh;
+    overflow: hidden;
+    background-color: #e5e5e5;
+
+    &.show{
+        width: 200px;
+    }
+
     &__top-section {
         background-color: #8b8b8b;
-        width: 200px;
         height: 158px;
         display: flex;
         justify-content: flex-end;
-        
     }
     &__img-wrap {
         background-color: #c4c4c4;
@@ -23,9 +49,8 @@
         width: 14px;
         height: 14px;
     }
-    &__bottom-section{
-        background-color: #e5e5e5;
-        width: 200px;
+    &__bottom-section {
+
         display: flex;
         flex-direction: column;
         padding-left: 25px;
@@ -39,7 +64,6 @@
         height: 44px;
         background-color: #c4c4c4;
         margin-bottom: 20px;
-        
     }
     &__select-category {
         font-weight: 500;
@@ -51,6 +75,8 @@
         font-weight: 500;
         font-size: 20px;
         line-height: 23px;
-        margin-left: 63px;
+        margin-top: 80%;
+        margin-left: auto;
+        margin-right: 20px;
     }
 }
