--- a/client/src/components/AddCard/add-card.module.scss
+++ b/client/src/components/AddCard/add-card.module.scss
@@ -19,15 +19,14 @@
         height: 180px;
         width: 100%;
         border-radius: 30px;
-        background-color: #ccc;
+        background: linear-gradient(180deg, #1C68CC 0%, #144B94 100%);
     }
 
     &__form {
         input {
             margin-top: 5px;
             margin-bottom: 10px;
-            border-width: 0;
-            background-color: #c4c4c4;
+            border: 1px solid #929292;
             border-radius: 5px;
             font-size: 24px;
             padding: 10px 20px;
@@ -49,7 +48,22 @@
         border-width: 0;
         font-size: 20px;
         border-radius: 5px;
-        background-color: #c4c4c4;
+    }
+
+    &__buttonRad {
+        color: #fff;
+        background: linear-gradient(180deg, #1A60BD 0%, #0D4693 100%);
+        border-radius: 20px;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        display: flex;
+        justify-content: space-between;
+        margin: 5px 0;
+        padding: 16px 20px 8px;
+        width: 100%;
+
+        input {
+            width: 20px;
+        }
     }
 
     &__return {
