--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -3,7 +3,7 @@
   padding: 0 19px;
   padding-top: 18px;
   padding-bottom: 30px;
-  background-color: #c4c4c4;
+  background-color: #F7B759;
 }
 .header__title {
   font-size: 40px;
