--- a/client/src/components/HomeScreen/homeScreen.scss
+++ b/client/src/components/HomeScreen/homeScreen.scss
@@ -10,9 +10,10 @@
     margin: 20px 0 22px 0;
   }
   &__card {
-    height: 136px;
-    background-color: #c4c4c4;
+    height: 120px;
     border-radius: 30px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-left: 1.9rem solid #0659A5;
     &-link {
       margin: 8px 0;
     }
