--- a/client/src/components/AddCard/add-card.module.scss
+++ b/client/src/components/AddCard/add-card.module.scss
@@ -16,10 +16,9 @@
     &__featured {
         margin-top: 30px;
         margin-bottom: 20px;
-        height: 180px;
-        width: 100%;
+        width: 110%;
+        margin-left: -5%;
         border-radius: 30px;
-        background: linear-gradient(180deg, #1C68CC 0%, #144B94 100%);
     }
 
     &__form {
