--- a/client/src/components/HomeScreen/homeScreen.scss
+++ b/client/src/components/HomeScreen/homeScreen.scss
@@ -23,10 +23,9 @@
     color: black;
   }
   &__new-card {
-    width: 103px;
-    height: 103px;
-    border-radius: 50%;
-    background-color: #c4c4c4;
+    width: 100%;
+    border-radius: 5px;
+    background-color: #C04800;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -40,10 +39,8 @@
   }
 }
 .homescreen__link {
+  color: #ffffff;
   display: flex;
   justify-content: center;
-  width: 103px;
-  margin-left: auto;
-  margin-right: auto;
   margin-top: 45px;
 }
