--- a/client/src/components/HomeScreen/homeScreen.scss
+++ b/client/src/components/HomeScreen/homeScreen.scss
@@ -13,7 +13,7 @@
     height: 120px;
     border-radius: 30px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-left: 1.9rem solid #0659A5;
+    border-left: 1.9rem solid #0659a5;
     &-link {
       margin: 8px 0;
     }
