--- a/client/src/components/Logo/logo.module.scss
+++ b/client/src/components/Logo/logo.module.scss
@@ -1,7 +1,8 @@
 .logo {
-    width: 100px;
+  width: 151px;
+  height: 40px;
 
-    &__image {
-        width: 100%;
-    }
+  &__image {
+    width: 100%;
+  }
 }
