--- a/client/src/components/Dashboard/Dashboard.scss
+++ b/client/src/components/Dashboard/Dashboard.scss
@@ -1,55 +1,63 @@
 .dashboard {
-  padding: 10px 22px;
+    &__header {
+        color: #ffffff;
+        padding: 10px 20px;
+        height: 170px;
+        background: #1e4786;
+        border-radius: 0px 0px 20px 20px;
+    }
+
+    &__content {
+        padding: 0 20px;
+    }
 }
 .dashboard__card {
-  height: 136px;
-  width: 100%;
-  background-color: #c4c4c4;
-  border-radius: 30px;
+    margin-top: -90px;
+    width: 110%;
+    margin-left: -5%;
 }
 .dashboard__paragraph {
-  margin: 0;
-  font-size: 15px;
+    margin: 0;
+    font-size: 15px;
 }
 h2 {
-  margin: 0;
-  margin-bottom: 13px;
-  font-size: 40px;
+    margin: 0;
+    margin-bottom: 13px;
+    font-size: 40px;
 }
 .dashboard__subheader {
-  margin-top: 28px;
-  font-size: 20px;
+    margin-top: 8px;
+    font-size: 20px;
 }
 .accounts__row {
-  display: flex;
-  align-items: center;
-  border-bottom: 1px solid #9e9e9e;
-  padding-bottom: 9px;
-  margin-bottom: 15px;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #9e9e9e;
+    padding-bottom: 9px;
+    margin-bottom: 15px;
 }
 .accounts__row:nth-last-child(1) {
-  border: none;
+    border: none;
 }
-.image__container {
-  height: 57px;
-  width: 57px;
-  background-color: #c4c4c4;
-  border-radius: 100%;
-  margin-right: 26px;
+.accounts__image {
+    height: 46px;
+    width: 46px;
+    border-radius: 100%;
+    margin-right: 26px;
 }
 .row-text__container {
-  margin-right: auto;
-  .row__text {
-    margin: 0;
-  }
-  .row__text:first-child {
-    font-size: 20px;
-  }
-  .row__text:nth-child(2) {
-    font-size: 12px;
-  }
+    margin-right: auto;
+    .row__text {
+        margin: 0;
+    }
+    .row__text:first-child {
+        font-size: 20px;
+    }
+    .row__text:nth-child(2) {
+        font-size: 12px;
+    }
 }
 
 .row__icon:nth-last-child(1) {
-  margin-left: 16px;
+    margin-left: 16px;
 }
