--- a/client/src/components/HomeScreen/homeScreen.scss
+++ b/client/src/components/HomeScreen/homeScreen.scss
@@ -10,10 +10,9 @@
     margin: 20px 0 22px 0;
   }
   &__card {
-    height: 120px;
+    width: 110%;
+    margin-left: -5%;
     border-radius: 30px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-left: 1.9rem solid #0659A5;
     &-link {
       margin: 8px 0;
     }
@@ -23,15 +22,14 @@
     color: black;
   }
   &__new-card {
-    width: 100%;
-    border-radius: 5px;
+    width: 80%;
+    border-radius: 15px;
     background-color: #C04800;
     display: flex;
     justify-content: center;
     align-items: center;
   }
   &__add-new-card-text {
-    width: 75px;
     text-align: center;
     font-weight: 300;
     font-size: 15px;
