--- a/client/src/components/HomeScreen/homeScreen.scss
+++ b/client/src/components/HomeScreen/homeScreen.scss
@@ -24,15 +24,15 @@
   &__new-card {
     width: 80%;
     border-radius: 15px;
-    background-color: #C04800;
+    background-color: #c04800;
     display: flex;
     justify-content: center;
     align-items: center;
   }
   &__add-new-card-text {
     text-align: center;
-    font-weight: 300;
-    font-size: 15px;
+    font-weight: 700;
+    font-size: 20px;
     line-height: 18px;
   }
 }
